--- a/csszhishi.html
+++ b/csszhishi.html
@@ -319,6 +319,8 @@ id选择器
            </TEXTAREA>
   未加<span> 标签时的效果：<p>some text.some other text.</p>
   加了<span> 标签时的效果：<p><span>some text.</span>some other text.</p>
+ 说明： 如果不对 span 应用样式，那么 span 元素中的文本与其他文本不会任何视觉上的差异。尽管如此，上例中的 span 元素仍然为 p 元素增加了额外的结构。
+可以为 span 应用 id 或 class 属性，这样既可以增加适当的语义，又便于对 span 应用样式。
   <li><a href="http://www.cnblogs.com/gangqing/p/4145258.html
 ">图示可参考博客园：盒子模型</a></li>
   
