--- a/linuxlilun.html
+++ b/linuxlilun.html
@@ -13,62 +13,61 @@
    <p>本博客包含以下内容 </p>
 
 <ol>
+<li>Linux启动流程</li>
+<li>
+ </li>
+<li>管理进程服务和进程 </li>
 <li></li>
 <li>
  </li>
-<li> </li>
-<li></li>
-<li>
- </li>
-<li></li>
+<li>shell操作</li>
 </ol>
 
 
 
-<h2 id="1基本定义">1、</h2>
-
-<p> <img src="https:" width="500" height="550" /></p>
-
+<h2 id="1基本定义">1、Linux启动流程</h2>
+<ol>
+<li>基本流程</li>
+<li>
+ </li>
+<li>唯一标识 PID</li>
+<li>7个级别</li>
+<li>
+ </li>
+<li>动作</li>
+ <li>进程</li>
+</ol>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/40.jpg?raw=true" width="500" height="550" /></p>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/41.jpg?raw=true" width="500" height="550" /></p>
 <h3 id="继承"> </h3>
 
 
 
-<h2 id="2初始化和类的加载">2、</h2>
+<h2 id="2初始化和类的加载">2、管理进程服务和进程</h2>
 
-
- <p> <img src="https:" width="500" height="550" /></p>
-<p> </p>
-
-<p> </p>
-
-
-<h2 id="3final关键字">3、 </h2>
-
+<ol>
+<li>ps静态显示进程信息</li>
+<li>
+ </li>
+<li>top查看动态进程信息 </li>
+<li></li>
+<li>
+ </li>
+<li>进程调度 at与crontab</li>
+</ol>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/42.jpg?raw=true" width="500" height="550" /></p>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/43.jpg?raw=true" width="500" height="550" /></p>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/44.jpg?raw=true" width="500" height="550" /></p>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/45.jpg?raw=true" width="500" height="550" /></p>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/46.jpg?raw=true" width="500" height="550" /></p>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/47.jpg?raw=true" width="500" height="550" /></p>
+<h2 id="3final关键字">3、shell操作 </h2>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/48.jpg?raw=true" width="500" height="550" /></p>
 
 <p> </p>
   
 <p> </p>
- <h2> 4.</h2>
-
-
-
-<p> </p>
-<p> </p>
-<p> </p>
-  <h2> 5.</h2>
-
-
-<p> </p>
-<p> </p>
-
-<p> </p>
-<p> </p>
-<p> </p><h2> 6.</h2>
-
-<p> </p>
- <p> </p>
-<p> </p>
-<p> </p>
+ 
 <p> </p>
 <p> </p>
 <p> </p>
