--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 </a></li>
   <li><a href="http://lib.csdn.net/base/javase 
 ">Java SE知识库</a></li>
+<li><a href="http://leibnizhu.gitlab.io/
+">Java git 知识库</a></li>
+
 <a href="#b">点击回到顶部</a>
  <a name="c"></a>
   <p>&nbsp;&nbsp;&nbsp;</p>
