--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 ">Java SE知识库</a></li>
 <li><a href="http://leibnizhu.gitlab.io/
 ">Java git 知识库</a></li>
-
+<h1>歌曲萌二代网页</h1>
+<iframe src="http://www.kuwo.cn/yinyue/6661157" width="500px" height="300px"></iframe>
 <a href="#b">点击回到顶部</a>
  <a name="c"></a>
   <p>&nbsp;&nbsp;&nbsp;</p>
