--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
 ">Java SE知识库</a></li>
 <li><a href="http://leibnizhu.gitlab.io/
 ">Java git 知识库</a></li>
-<h5>QQ歌曲</h5>
-<iframe src="http://www.kuwo.cn/yinyue/6661157" width="500px" height="300px"></iframe>
-<a href="#b">点击回到顶部</a>
+
+<p><a href="#b">点击回到顶部</a></p>
  <a name="c"></a>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
