--- a/linuxshizhan.html
+++ b/linuxshizhan.html
@@ -153,6 +153,9 @@
 ">linux运行级别与管理进程和服务</a></li>
   <li><a href="http://www.w3school.com.cn/ 
 ">w3c官网发布标签</a></li>
+  
+  <h5>QQ歌曲</h5>
+<iframe src="http://www.kuwo.cn/yinyue/6661157" width="500px" height="300px"></iframe>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
