--- a/shiji.html
+++ b/shiji.html
@@ -1,4 +1,3 @@
-Hello World
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,7 +7,7 @@ Hello World
            <!--设置段落文本对齐-->
             text-align:center;
              <!--设置文本缩进-->
-            text-indent:2em;
+            text-indent:center;
              
              <!--字体颜色-->
             color:#cccccc;
