--- a/shiji.html
+++ b/shiji.html
@@ -7,7 +7,7 @@
            <!--设置段落文本对齐-->
             text-align:center;
              <!--设置文本缩进-->
-            text-indent:center;
+            text-indent:20em;
              
              <!--字体颜色-->
             color:#cccccc;
@@ -17,7 +17,7 @@
              <!--设置文本缩进-->
             text-indent:2em;
               <!--设置行高-->
-            line-height:100px;
+            line-height:500px;
 
          
           }
@@ -46,12 +46,12 @@
   <li><a href="#q">粉碎敌人对山东重点进攻示意图</a>
 </li>
   <li><a href="#r">党制定夺取全国胜利的纲领</a></li>
-  <li><a href="#s">统一战线与战略进攻的发展<</a>/li>
+  <li><a href="#s">统一战线与战略进攻的发展</a></li>
   <li><a href="#t">战略决战之辽沈 淮海 平津</a></li>
   <li><a href="#u">辽沈</a></li>
  <li><a href="#v">辽沈战役示意图</a></li>
   <li><a href="#w">淮海</a></li>
-   <li><a href="#x">淮海战役示意图<</a>/li>
+   <li><a href="#x">淮海战役示意图</a></li>
    <li><a href="#y">平津</a></li>
    <li><a href="#z">平津战役示意图</a></li>
 </ol>
