--- a/shiji.html
+++ b/shiji.html
@@ -7,7 +7,7 @@
            <!--设置段落文本对齐-->
             text-align:center;
              <!--设置文本缩进-->
-            text-indent:20em;
+            text-indent:200px;
              
              <!--字体颜色-->
             color:#cccccc;
