--- a/shiji.html
+++ b/shiji.html
@@ -2,6 +2,16 @@
   <head>
     <meta charset="utf-8">
   <style type="text/css">
+     #warp{
+             width:1005px;
+             height:800px;
+             border:1px solid #ccc;
+             margin:0 auto;
+              text-indent:center;
+
+         }
+   
+    
         <!--选中段落，标签为h1-->
          h1{
            <!--设置段落文本对齐-->
@@ -24,8 +34,11 @@
 </style>
 </head>
 <body bgcolor="cccccc">
-   <div id=>
+   <div id="warp">
+
    <h1>党史</h1>
+      </div>
+
   </div>
 <ol>
 <li><a href="#c">南昌起义与八七会议</a></li>
