--- a/shiji.html
+++ b/shiji.html
@@ -26,7 +26,7 @@
 </head>
 <body bgcolor="cccccc">
   
-   <h1>党史</h1>
+   <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;党史</h1>
     <a name="b"></a>
 
   
