--- a/shiji.html
+++ b/shiji.html
@@ -16,7 +16,7 @@
              <!--设置加粗-->
             font-weight:blod;
              font-size:80px;
-           font-colour:red;
+           
            text-aglign:center;
           }
      h2{
@@ -48,7 +48,7 @@
            color:#ffffff;
             
           }
-    ol li{
+    ul li{
            <!--设置列表项符合-->
             list-style-type:circle;
 
@@ -58,12 +58,12 @@
 <body bgcolor="cccccc">
    <div id="warp">
 
-   <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;党史</h1>
+   <h1 align="center"><font color="red">党史</font></h1>
     <a name="b"></a>
  </div>
 
   
-<ol>
+<ul>
 <li><a href="#c">南昌起义与八七会议</a></li>
 <li><a href="#d">根据地井冈山的开辟
 </li>
@@ -75,7 +75,7 @@
   <li><a href="#s">统一战线与战略进攻的发展</a></li>
   <li><a href="#t">战略决战之辽沈 淮海 平津</a></li>
  
-</ol>
+</ul>
 
 
 
