--- a/shiji.html
+++ b/shiji.html
@@ -35,12 +35,12 @@
           }
          <!--鼠标经过超链接-->
          a:link{
-            color:#cccfff;
+            color:#cffcff;
             
           }
          <!--链接被点击的那一刻-->
          a:link{
-            color:#fffccc;
+            color:#cccfff;
             
           }
          <!--访问过的超链接-->
@@ -50,7 +50,8 @@
           }
     ul li{
            <!--设置列表项符合-->
-            list-style-type:circle;
+            list-style-type:none;
+            line-height:100px
 
 
 </style>
