--- a/shiji.html
+++ b/shiji.html
@@ -51,11 +51,21 @@
     ul li{
            <!--设置列表项符合-->
             list-style-type:none;
-            line-height:100px
+            line-height:100px;
+    }
+     p{
+         
+             <!--设置文本缩进-->
+            text-indent:2em;
+              <!--设置行高-->
+            line-height:80px;
 
+         
+          }
+ 
 
 </style>
-</head>
+</head>   
 <body bgcolor="cccccc">
    <div id="warp">
 
@@ -77,11 +87,11 @@
   <li><a href="#t">战略决战之辽沈 淮海 平津</a></li>
  
 </ul>
-
-
-
-
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
 <a name="c"></a>
+  
 <h2>&nbsp;&nbsp;&nbsp;南昌起义与八七会议</h2>
 
   <p> <img src="https://github.com/liruida/cangku1/blob/master/102.jpg?raw=true" width="500" height="550" /></p>
