--- a/shiji.html
+++ b/shiji.html
@@ -19,7 +19,9 @@
            
            text-aglign:center;
           }
-     
+    a{
+       text-decoration:none;
+    }
     <!--未被访问的超链接-->
          a:link{
             color:#cccccc;
