--- a/shiji.html
+++ b/shiji.html
@@ -44,6 +44,7 @@
            <!--设置列表项符合-->
           
             line-height:100px;
+             list-style-type:none;
     }
      p{
          
