--- a/shiji.html
+++ b/shiji.html
@@ -69,14 +69,30 @@
   
 <ul>
 <li><a href="#c">南昌起义与八七会议</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+   <p>&nbsp;&nbsp;&nbsp;</p>
 <li><a href="#d">根据地井冈山的开辟
 </li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+   <p>&nbsp;&nbsp;&nbsp;</p>
 <li><a href="#e">古田会议与军队的建设</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+   <p>&nbsp;&nbsp;&nbsp;</p>
 <li><a href="#f">中央红军五次反围剿与长征</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+   <p>&nbsp;&nbsp;&nbsp;</p>
   <li><a href="#k">敌后抗日根据地的建立</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+   <p>&nbsp;&nbsp;&nbsp;</p>
   <li><a href="#n">解放战争序幕</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+   <p>&nbsp;&nbsp;&nbsp;</p>
   <li><a href="#r">党制定夺取全国胜利的纲领</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+   <p>&nbsp;&nbsp;&nbsp;</p>
   <li><a href="#s">统一战线与战略进攻的发展</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+   <p>&nbsp;&nbsp;&nbsp;</p>
   <li><a href="#t">战略决战之辽沈 淮海 平津</a></li>
  
 </ul>
