--- a/shiji.html
+++ b/shiji.html
@@ -71,8 +71,7 @@
 <li><a href="#c">南昌起义与八七会议</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
    <p>&nbsp;&nbsp;&nbsp;</p>
-<li><a href="#d">根据地井冈山的开辟
-</li>
+<li><a href="#d">根据地井冈山的开辟</li>
   <p>&nbsp;&nbsp;&nbsp;</p>
    <p>&nbsp;&nbsp;&nbsp;</p>
 <li><a href="#e">古田会议与军队的建设</a></li>
