--- a/shiji.html
+++ b/shiji.html
@@ -63,7 +63,7 @@
    <a name="b"></a>
    <div id="warp">
 
-   <h1 align="center"><font color="blue">党史</font></h1>
+   <h1 align="center"><font color="red">党史</font></h1>
    
  </div>
 
