--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <li>问题提出</li>
 <li>解决方法</li>
 <li>原理解释</li>
-<li>加料：编译系统透视：http://v.qq.com/vplus/2f8cf44cbc8be594a25e9827b38c171e/videos</li>
+<li><a href="http://v.qq.com/vplus/2f8cf44cbc8be594a25e9827b38c171e/videos">透视编译</a></li>
 
 </ol>
 <a href="#c">点击回到底部</a>
