--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 </ol>
 <h2><a href="http://v.qq.com/vplus/2f8cf44cbc8be594a25e9827b38c171e/videos"><font color="black">透视编译</font></a></h2>
-<input type="text"  style="width: 800px; font-size: 16px; overflow: 
+<p><input type="text"  style="width: 800px; font-size: 16px; overflow: 
 
 hidden; height: 10%;" placeholder="                                        
 
-软件的本质是数据结构承载着逻辑，仅此而已。变化无穷。"">
-                            <h></h>
+  软件的本质是数据结构承载着逻辑，仅此而已。变化无穷。""></p>
+                            <p></p>
   
-<a href="#c">点击回到底部</a>
+                            <p><a href="#c">点击回到底部</a></p>
 <a name="b"></a>
 
 
