--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </ol>
 <h2><a href="http://v.qq.com/vplus/2f8cf44cbc8be594a25e9827b38c171e/videos"><font color="black">透视编译</font></a></h2>
-<p><input type="text"  style="width: 800px; font-size: 16px; overflow: 
+<p><input type="text"   readonly="readonlyhh"  style="width: 800px; font-size: 16px; overflow: 
 
 hidden; height: 10%;" placeholder="                                        
 
